IMR-150 filter text too long fix [skip-ci]

--- a/ui.frontend/src/main/webpack/components/leforemhe/site/filtre/scss/filtre.scss
+++ b/ui.frontend/src/main/webpack/components/leforemhe/site/filtre/scss/filtre.scss
@@ -77,7 +77,6 @@
       align-items: center;
       justify-content: space-between;
       padding: 0.5rem 1rem;
-      height: 4.4rem;
       border-radius: 10px;
 
       label {
@@ -105,6 +104,13 @@
 
         label {
           font-size: 1.6rem;
+
+          // -webkit-line-clamp: 1;
+          // line-clamp: 1;
+          // overflow: hidden;
+          // text-overflow: ellipsis;
+          // display: -webkit-box;
+          // -webkit-box-orient: vertical;
         }
       }
     }
